--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
-    "next": "^14.2.35",
+    "next": "16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,8 +19,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^16.1.6",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
