--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "@vercel/analytics": "^1.6.1",
     "next": "16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
